--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>WebApp Dashboard</title>
   </head>
   <body>
     <div class="container">
@@ -146,7 +145,7 @@
         <div class="socialCard">
           <ul>
             <li>
-              <svg class="twitter icon" version="1.1" height="56.693px" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg class="twitter icon" version="1.1" height="56.693px" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               	 viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" width="56.693px" xml:space="preserve">
               <path fill="white" d="M32,3.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6C25.8,0.8,24,0,22.2,0
               	c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5C10.3,7.8,5.5,5.2,2.2,1.2c-0.6,1-0.9,2.1-0.9,3.3c0,2.3,1.2,4.3,2.9,5.5
@@ -158,7 +157,7 @@
               <p>10,345</p>
             </li>
             <li>
-              <svg class="facebook icon" enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1"
+              <svg class="facebook icon" enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_4" version="1.1"
                    viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <path fill="white" d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029
                 c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z"/>
@@ -167,7 +166,7 @@
               <p>8,739</p>
             </li>
             <li>
-              <svg class="google icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg class="google icon" version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               	 viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
               <path fill="white" d="M17.7,25.7c0-0.3,0-0.5-0.1-0.8c-0.1-0.2-0.1-0.5-0.2-0.7c-0.1-0.2-0.2-0.4-0.3-0.7c-0.2-0.2-0.3-0.4-0.4-0.6
               	c-0.1-0.2-0.3-0.3-0.5-0.6c-0.2-0.2-0.4-0.4-0.5-0.5c-0.1-0.1-0.3-0.3-0.6-0.5c-0.3-0.2-0.5-0.4-0.6-0.4s-0.3-0.2-0.6-0.4
@@ -198,32 +197,31 @@
         <h2>New Members</h2>
         <ul>
           <li>
-            <img src="images/member-1.jpg">
+            <img src="images/member-1.jpg" alt="member 1">
             <p>member 1</p>
             <a href="mailto:member1@example.com">member1@example.com</a>
-            <p id="dateRegistered">dd/mm/yyyy</p>
+            <p  >dd/mm/yyyy</p>
           </li>
           <li>
-            <img src="images/member-2.jpg">
+            <img src="images/member-2.jpg" alt="member 2">
             <p>member 2</p>
             <a href="mailto:member2@example.com">member2@example.com</a>
-            <p id="dateRegistered">dd/mm/yyyy</p>
+            <p  >dd/mm/yyyy</p>
           </li>
           <li>
-            <img src="images/member-3.jpg">
+            <img src="images/member-3.jpg" alt="member 3">
             <p>member 3</p>
             <a href="mailto:member3@example.com">member3@example.com</a>
-            <p id="dateRegistered">dd/mm/yyyy</p>
+            <p  >dd/mm/yyyy</p>
           </li>
           <li>
-            <img src="images/member-4.jpg">
             <p>member 4</p>
             <a href="mailto:member4@example.com">member4@example.com</a>
-            <p id="dateRegistered">dd/mm/yyyy</p>
+            <p  >dd/mm/yyyy</p>
           </li>
         </ul>
         <form class="messageUser" action="index.html" method="post">
-          <label for="userEmail">
+          <label for="user">
             <input id="user" name="search" placeholder="Start typing here" type="text" data-list=".list">
           </label>
           <label class="messageUser">
@@ -238,42 +236,42 @@
         <h2>Recent Activity</h2>
         <ul>
           <li>
-            <img src="images/member-1.jpg">
+            <img src="images/member-1.jpg" alt="member 1">
             <p>Member 1 just commented on YourApp</p>
-            <span id="activityTime">4 hours ago</span>
+            <span   >4 hours ago</span>
           </li>
           <li>
-            <img src="images/member-2.jpg">
+            <img src="images/member-2.jpg" alt="member 2">
             <p>Member 2 just posted on YourApp</p>
-            <span id="activityTime">4 hours ago</span>
+            <span   >4 hours ago</span>
           </li>
           <li>
-            <img src="images/member-3.jpg">
+            <img src="images/member-3.jpg" alt="member 3">
             <p>Member 3 just commented on YourApp</p>
-            <span id="activityTime">4 hours ago</span>
+            <span   >4 hours ago</span>
           </li>
           <li>
-            <img src="images/member-4.jpg">
+            <img src="images/member-4.jpg" alt="member 4">
             <p>Member 4 just posted on YourApp</p>
-            <span id="activityTime">4 hours ago</span>
+            <span   >4 hours ago</span>
           </li>
         </ul>
         <div class="settings">
             <h3>Settings</h3>
             <div>
                 <label for="emailNotifications" class="switch">Send Email Notifications</label>
-                <button role="switch" aria-checked="true"id="emailNotifications" class="switch">
-                    <span id="emailNotifications" class="on">ON</span>
-                    <span id="switchCircle"></span>
-                    <span id="emailNotifications" class="off">OFF</span>
+                <button name="switch" role="switch" aria-checked="true" id="emailNotifications" type="button" class="switch">
+                    <span class="on">ON</span>
+                    <span id="switchCircle1"></span>
+                    <span class="off">OFF</span>
                 </button>
             </div>
             <div>
                 <label for="publicProfile" class="switch">Set Profile to Public</label>
-                <button role="switch" aria-checked="true"id="publicProfile" class="switch">
-                    <span id="publicProfile" class="on">ON</span>
-                    <span id="switchCircle">C</span>
-                    <span id="publicProfile" class="off">OFF</span>
+                <button type="button"  role="switch" aria-checked="true" id="publicProfile" class="switch">
+                    <span class="on">ON</span>
+                    <span id="switchCircle2">C</span>
+                    <span class="off">OFF</span>
                 </button>
             </div>
             <select name="timeZone" id="timeZone">
@@ -285,7 +283,6 @@
             </div>
         </div>
       </div>
-    </div>
     </div>
     </div>
     <script src="HideSeek/jquery-1.9.1.min.js"></script>
