--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <label for="emailNotifications" class="switch">Send Email Notifications</label>
                 <button name="switch" role="switch" aria-checked="true" id="emailNotifications" type="button" class="switch">
                     <span class="on">ON</span>
-                    <span id="switchCircle1"></span>
+                    <span id="switchCircle"></span>
                     <span class="off">OFF</span>
                 </button>
             </div>
@@ -270,7 +270,7 @@
                 <label for="publicProfile" class="switch">Set Profile to Public</label>
                 <button type="button"  role="switch" aria-checked="true" id="publicProfile" class="switch">
                     <span class="on">ON</span>
-                    <span id="switchCircle2">C</span>
+                    <span id="switchCircle">C</span>
                     <span class="off">OFF</span>
                 </button>
             </div>
